k8s-yamls-master/k8s-yamls-master/live/All-Clusters-BASE-REQUIRED/nginx-ingress-controller/old/0.46.0/deploy-ext.yaml
---
# Source: ingress-nginx/templates/controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    helm.sh/chart: ingress-nginx-3.30.0
    app.kubernetes.io/name: ingress-nginx-ext
    app.kubernetes.io/instance: ingress-nginx-ext
    app.kubernetes.io/version: 0.46.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: ingress-nginx-controller-ext
  namespace: ingress-nginx
spec:
  type: NodePort
  ports:
    - name: http
      nodePort: 31080
      port: 8080
      protocol: TCP
      targetPort: http
    - name: https
      nodePort: 31443
      port: 9443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/name: ingress-nginx-ext
    app.kubernetes.io/instance: ingress-nginx-ext
    app.kubernetes.io/component: controller
---
# Source: ingress-nginx/templates/controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    helm.sh/chart: ingress-nginx-3.30.0
    app.kubernetes.io/name: ingress-nginx-ext
    app.kubernetes.io/instance: ingress-nginx-ext
    app.kubernetes.io/version: 0.46.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: ingress-nginx-controller-ext
  namespace: ingress-nginx
spec:
  replicas: 5
  selector:
    matchLabels:
      app.kubernetes.io/name: ingress-nginx-ext
      app.kubernetes.io/instance: ingress-nginx-ext
      app.kubernetes.io/component: controller
  revisionHistoryLimit: 2
  minReadySeconds: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ingress-nginx-ext
        app.kubernetes.io/instance: ingress-nginx-ext
        app.kubernetes.io/component: controller
      annotations:
        prometheus.io/port: "10254"
        prometheus.io/scrape: "true"
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app.kubernetes.io/name
                  operator: In
                  values:
                  - ingress-nginx-ext
              topologyKey: topology.kubernetes.io/zone
            weight: 100
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchLabels:
                app.kubernetes.io/name: ingress-nginx-ext
            topologyKey: "kubernetes.io/hostname"
      dnsPolicy: ClusterFirst
      containers:
        - name: controller
          image: k8s.gcr.io/ingress-nginx/controller:v0.46.0@sha256:52f0058bed0a17ab0fb35628ba97e8d52b5d32299fbc03cc0f6c7b9ff036b61a
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command:
                  - /wait-shutdown
          args:
            - /nginx-ingress-controller
            - --election-id=ingress-controller-leader-ext
            - --ingress-class=nginx-ext
            - --configmap=$(POD_NAMESPACE)/ingress-nginx-controller
            # - --validating-webhook=:8443
            # - --validating-webhook-certificate=/usr/local/certificates/cert
            # - --validating-webhook-key=/usr/local/certificates/key
            - --enable-ssl-chain-completion=false
            #- --enable-ssl-passthrough=true
            - --default-ssl-certificate=ingress-nginx/star-fullchain.medimpact.com.tls
            - --http-port=8080
            - --https-port=9443
          securityContext:
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
            runAsUser: 101
            allowPrivilegeEscalation: false
          livenessProbe:
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: https
              containerPort: 9443
              protocol: TCP
            # - name: webhook
              # containerPort: 8443
              # protocol: TCP
          # volumeMounts:
            # - name: webhook-cert
              # mountPath: /usr/local/certificates/
              # readOnly: true
          resources:
            requests:
              cpu: 100m
              memory: 90Mi
      nodeSelector:
        kubernetes.io/os: linux
      serviceAccountName: ingress-nginx
      terminationGracePeriodSeconds: 300
